add first table

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -33,8 +33,20 @@
         <button id="getcsv" style="background-color:#FCF5E5">Get CSV data</button>
       </div>
 
-      <div style="background-color:MediumSeaGreen" float="center">
-        Hallo
+      <div style="background-color:DarkKhaki" float="center">
+        <table>
+          <tr>
+            <td>8</td>
+            <td>7</td>
+            <td>6</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+          </tr>
       </div>
 
       <div style="background-color:MediumSeaGreen" float="center">
