forgot to end table

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -33,7 +33,7 @@
         <button id="getcsv" style="background-color:#FCF5E5">Get CSV data</button>
       </div>
 
-      <div style="background-color:DarkKhaki" float="center">
+      <div style="background-color:DarkKhaki">
         <table>
           <tr>
             <td>8</td>
@@ -47,6 +47,7 @@
             <td>3</td>
             <td>4</td>
           </tr>
+        </table>
       </div>
 
       <div style="background-color:MediumSeaGreen" float="center">
