--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -34,6 +34,7 @@
       </div>
 
       <div style="background-color:DarkKhaki">
+        TEC arrangement:
         <table>
           <tr>
             <td>8</td>
