--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -20,6 +20,13 @@
           margin: 10px 0;
           line-height:22px;
       }
+      table, th, td {
+          border: 1px solid white;
+          border-collapse: collapse;
+      }
+      th, td {
+          background-color: #96D4D4;
+      }
     </style>
   </head>
   <body>
