--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -20,13 +20,6 @@
           margin: 10px 0;
           line-height:22px;
       }
-      table, th, td {
-          border: 1px solid white;
-          border-collapse: collapse;
-      }
-      th, td {
-          background-color: #96D4D4;
-      }
     </style>
   </head>
   <body>
@@ -40,7 +33,7 @@
         <button id="getcsv" style="background-color:#FCF5E5">Get CSV data</button>
       </div>
 
-      <div style="background-color:DarkKhaki">
+      <div style="background-color:DarkKhaki" border="2px">
         TEC arrangement:
         <table>
           <tr>
