--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -33,9 +33,9 @@
         <button id="getcsv" style="background-color:#FCF5E5">Get CSV data</button>
       </div>
 
-      <div style="background-color:DarkKhaki" border="2px">
+      <div style="background-color:DarkKhaki" >
         TEC arrangement:
-        <table>
+        <table  border="1">
           <tr>
             <td>8</td>
             <td>7</td>
