--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -35,7 +35,7 @@
 
       <div style="background-color:DarkKhaki" >
         TEC arrangement:
-        <table  border="2">
+        <table  border="2" cellspacing="0" cellpadding="3">
           <tr>
             <td>8</td>
             <td>7</td>
