--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -34,8 +34,8 @@
       </div>
 
       <div style="background-color:DarkKhaki" >
-        TEC arrangement:
-        <table  border="2" cellspacing="0" cellpadding="3">
+        <b>TEC arrangement</b>
+        <table style="border-collapse: collapse" border="2" cellspacing="0" cellpadding="3">
           <tr>
             <td>8</td>
             <td>7</td>
