--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -37,16 +37,16 @@
         <b>TEC arrangement</b>
         <table style="border-collapse: collapse" border="2" cellspacing="0" cellpadding="3">
           <tr>
-            <td style = "border: 1px solid black;  border-radius: 10px;">8</td>
-            <td style = "border: 1px solid black;  border-radius: 10px;">7</td>
-            <td style = "border: 1px solid black;  border-radius: 10px;">6</td>
-            <td style = "border: 1px solid black;  border-radius: 10px;">5</td>
+            <td style = "border-color: #96D4D4; border: 1px solid black;  border-radius: 10px;">8</td>
+            <td style = "border-color: #96D4D4; border: 1px solid black;  border-radius: 10px;">7</td>
+            <td style = "border-color: #96D4D4; border: 1px solid black;  border-radius: 10px;">6</td>
+            <td style = "border-color: #96D4D4; border: 1px solid black;  border-radius: 10px;">5</td>
           </tr>
           <tr>
-            <td style = "border: 1px solid black;  border-radius: 10px;">1</td>
-            <td style = "border: 1px solid black;  border-radius: 10px;">2</td>
-            <td style = "border: 1px solid black;  border-radius: 10px;">3</td>
-            <td style = "border: 1px solid black;  border-radius: 10px;">4</td>
+            <td style = "border-color: #96D4D4; border: 1px solid black;  border-radius: 10px;">1</td>
+            <td style = "border-color: #96D4D4; border: 1px solid black;  border-radius: 10px;">2</td>
+            <td style = "border-color: #96D4D4; border: 1px solid black;  border-radius: 10px;">3</td>
+            <td style = "border-color: #96D4D4; border: 1px solid black;  border-radius: 10px;">4</td>
           </tr>
         </table>
       </div>
