--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -408,7 +408,7 @@
           let redLight      = vNumbers[2].replace("G", "");
           let lidStatus     = vNumbers[3].replace("L", "");
           let interLock     = vNumbers[4].replace("I", "");
-          let freeDiskspace = vNumbers[5];
+          let freeDiskspace = vNumbers[5] + "GB";
 
           document.getElementById('LidStatus').innerHTML = lidStatus;
           document.getElementById('Interlock').innerHTML = interLock;
