--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -89,7 +89,7 @@
           </tr>
           <tr>
             <td>Traffic light</td>
-            <td id="TrafficLight" style="text-align:right;">n/a </td>
+            <td id="TrafficLight" style="text-align:right;">will follow </td>
           </tr>
         </table>
       </div>
