change color of button if clicked

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -366,9 +366,16 @@
           document.getElementById('statusDiv').style = "background-color:Goldenrod";
       });
 
-      valve0.addEventListener('click', (e) => {socket.emit('valve0'); });
+      valve0.addEventListener('click', (e) => {
+          socket.emit('valve0');
+          if (valve0.style.background =='#46923c') {
+              valve0.style.background='#D3D3D3';
+          } else {
+              valve0.style.background =='#46923c';
+          }
+      });
       valve1.addEventListener('click', (e) => {socket.emit('valve1'); });
-
+      
       getcsv.addEventListener('click', (e) => {socket.emit('getcsv'); });
 
 //      socket.on('valve0blue', (msg) => {valve0.style.background='#46923c'; });
