--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -367,7 +367,7 @@
       });
 
       valve0.addEventListener('click', (e) => {
-          valve0.style.background =='darkgray';
+          valve0.style.background = 'darkgray';
 //          if (valve0.style.background =='#46923c') {
 //              valve0.style.background='#D3D3D3';
 //          } else {
@@ -377,7 +377,7 @@
       });
 
       valve1.addEventListener('click', (e) => {
-          valve1.style.background =='darkgray';
+          valve1.style.background = 'darkgray';
 //          if (valve1.style.background =='#46923c') {
 //              valve1.style.background='#D3D3D3';
 //          } else {
