first step to colorReducedIndex

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -727,7 +727,7 @@
           if (temp > 40.) return 8;
       }
 
-      function colorReducedIndex(double temp)  {
+      function colorReducedIndex(temp)  {
           if (temp < 10.)  return 1;
           if (temp < 20.)  return 2;
           if (temp < 30.)  return 4;
