--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -705,15 +705,15 @@
       }
       
       let mycolors = [];
-      mycolors.push('rgb(  0,   0, 250)');
-      mycolors.push('rgb( 20,  80, 250)');
-      mycolors.push('rgb( 20, 250, 250)');
-      mycolors.push('rgb( 20, 240, 180)');
-      mycolors.push('rgb( 10, 200,  10)');
-      mycolors.push('rgb( 80, 240,   0)');
-      mycolors.push('rgb(240, 240,   0)');
-      mycolors.push('rgb(240,  80,   0)');
-      mycolors.push('rgb(240,   0,   0)');
+      mycolors.push('#0000fa'); // dark blue
+      mycolors.push('#1450fa'); // blue
+      mycolors.push('#14fafa'); // cyan
+      mycolors.push('#14f0b4'); // green-blue
+      mycolors.push('#0ac80a'); // darker green
+      mycolors.push('#50f000'); // light green
+      mycolors.push('#f0f000'); // yellow
+      mycolors.push('#f05000'); // orange
+      mycolors.push('#f00000'); // red
 
 
 
