--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -427,17 +427,17 @@
 
           if (1 == lidStatus) {
               document.getElementById('LidStatus').innerHTML = "locked";
-              document.getElementById('LidStatus').style.background = mycolors[4];
+              document.getElementById('LidStatus').style.backgroundColor = mycolors[4];
           } else {
               document.getElementById('LidStatus').innerHTML = "open";
-              document.getElementById('LidStatus').style.background = mycolors[6];
+              document.getElementById('LidStatus').style.backgroundColor = mycolors[6];
           }
           if (1 == interLock) {
               document.getElementById('Interlock').innerHTML = "good";
-              document.getElementById('Interlock').style.background = mycolors[4];
+              document.getElementById('Interlock').style.backgroundColor = mycolors[4];
           } else {
               document.getElementById('Interlock').innerHTML = "bad";
-              document.getElementById('Interlock').style.background = mycolors[8];
+              document.getElementById('Interlock').style.backgroundColor = mycolors[8];
           }
           document.getElementById('FreeDiskspace').innerHTML = freeDiskspace;
       });
