--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -392,8 +392,9 @@
           const snumbers = msg.toString().replace('Env = ', '');
           const vNumbers = snumbers.split(', ');
           let tmp = parseFloat(vNumbers[0]); 
-          document.getElementById('TempAir').innerHTML = tmp.toFixed(2);
-          document.getElementById('TempAir').background = mycolors[colorReducedIndex(tmp)];
+          var el = document.getElementById('TempAir');
+          el.innerHTML       = tmp.toFixed(2);
+          el.backgroundColor = mycolors[colorReducedIndex(tmp)];
           console.log("tmp = " + tmp + " colorReducedIndex(tmp) = " + colorReducedIndex(tmp)
                       + " color: " + mycolors[colorReducedIndex(tmp)]);
           document.getElementById('TempWater').innerHTML = parseFloat(vNumbers[1]).toFixed(2);
