--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -31,7 +31,7 @@
         <button id="valve0" style="background-color:#D3D3D3">Flush</button>
         <button id="valve1" style="background-color:#D3D3D3">Rinse</button> <br>
         <hr>
-        <button id="getcsv" style="background-color:#FCF5E5">Get CSV data</button>
+        <button id="getcsv" style="background-color:#FCF5E5" disabled>Get CSV data</button>
       </div>
 
       <div style="background-color:DarkKhaki" >
